--- a/css/style.css
+++ b/css/style.css
@@ -692,10 +692,6 @@ h3{
   top: 5rem;
 }
 
-.top-0{
-  top: 0px;
-}
-
 .z-10{
   z-index: 10;
 }
@@ -711,6 +707,10 @@ h3{
 
 .mb-5{
   margin-bottom: 1.25rem;
+}
+
+.mt-2{
+  margin-top: 0.5rem;
 }
 
 .block{
@@ -741,6 +741,14 @@ h3{
   height: 0.125rem;
 }
 
+.h-10{
+  height: 2.5rem;
+}
+
+.h-12{
+  height: 3rem;
+}
+
 .h-20{
   height: 5rem;
 }
@@ -749,8 +757,24 @@ h3{
   height: 420px;
 }
 
+.h-\[75px\]{
+  height: 75px;
+}
+
 .h-full{
   height: 100%;
+}
+
+.max-h-72{
+  max-height: 18rem;
+}
+
+.max-h-96{
+  max-height: 24rem;
+}
+
+.min-h-12{
+  min-height: 3rem;
 }
 
 .w-5{
@@ -783,6 +807,10 @@ h3{
 
 .cursor-pointer{
   cursor: pointer;
+}
+
+.resize-y{
+  resize: vertical;
 }
 
 .grid-cols-2{
@@ -869,9 +897,18 @@ h3{
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
+.bg-purple-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(147 51 234 / var(--tw-bg-opacity));
+}
+
 .bg-purple-900{
   --tw-bg-opacity: 1;
   background-color: rgb(88 28 135 / var(--tw-bg-opacity));
+}
+
+.bg-transparent{
+  background-color: transparent;
 }
 
 .bg-white{
@@ -879,13 +916,22 @@ h3{
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-transparent{
-  background-color: transparent;
+.bg-\[\#5221E6\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(82 33 230 / var(--tw-bg-opacity));
 }
 
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.p-2{
+  padding: 0.5rem;
+}
+
+.p-2\.5{
+  padding: 0.625rem;
 }
 
 .p-5{
@@ -970,6 +1016,11 @@ h3{
   padding-bottom: 91px;
 }
 
+.px-\[182px\]{
+  padding-left: 182px;
+  padding-right: 182px;
+}
+
 .pb-11{
   padding-bottom: 2.75rem;
 }
@@ -1034,10 +1085,6 @@ h3{
   padding-top: 91px;
 }
 
-.pt-20{
-  padding-top: 5rem;
-}
-
 .font-sen{
   font-family: Sen, sans-serif;
 }
@@ -1072,6 +1119,10 @@ h3{
   font-weight: 700;
 }
 
+.uppercase{
+  text-transform: uppercase;
+}
+
 .leading-6{
   line-height: 1.5rem;
 }
@@ -1103,6 +1154,16 @@ h3{
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.placeholder-gray-600::-moz-placeholder{
+  --tw-placeholder-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-placeholder-opacity));
+}
+
+.placeholder-gray-600::placeholder{
+  --tw-placeholder-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-placeholder-opacity));
 }
 
 .transition-\[left\]{
@@ -1170,6 +1231,11 @@ h3{
 .hover\:bg-purple-700:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(126 34 206 / var(--tw-bg-opacity));
+}
+
+.active\:bg-purple-950:active{
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 7 100 / var(--tw-bg-opacity));
 }
 
 @media (min-width: 640px){
@@ -1341,10 +1407,6 @@ h3{
     padding-top: 67px;
   }
 
-  .md\:pt-0{
-    padding-top: 0px;
-  }
-
   .md\:after\:block::after{
     content: var(--tw-content);
     display: block;
@@ -1406,6 +1468,11 @@ h3{
   .\32xl\:px-\[72px\]{
     padding-left: 72px;
     padding-right: 72px;
+  }
+
+  .\32xl\:px-\[182px\]{
+    padding-left: 182px;
+    padding-right: 182px;
   }
 
   .\32xl\:pt-32{
