--- a/css/style.css
+++ b/css/style.css
@@ -709,8 +709,20 @@ h3{
   margin-bottom: 1.25rem;
 }
 
+.mb-8{
+  margin-bottom: 2rem;
+}
+
+.mt-12{
+  margin-top: 3rem;
+}
+
 .mt-2{
   margin-top: 0.5rem;
+}
+
+.mb-6{
+  margin-bottom: 1.5rem;
 }
 
 .block{
@@ -757,6 +769,10 @@ h3{
   height: 420px;
 }
 
+.h-\[48px\]{
+  height: 48px;
+}
+
 .h-\[75px\]{
   height: 75px;
 }
@@ -765,8 +781,12 @@ h3{
   height: 100%;
 }
 
-.max-h-72{
-  max-height: 18rem;
+.h-\[50px\]{
+  height: 50px;
+}
+
+.h-\[60px\]{
+  height: 60px;
 }
 
 .max-h-96{
@@ -785,8 +805,16 @@ h3{
   width: 2rem;
 }
 
+.w-\[196px\]{
+  width: 196px;
+}
+
 .w-full{
   width: 100%;
+}
+
+.w-\[140px\]{
+  width: 140px;
 }
 
 .max-w-\[550px\]{
@@ -817,6 +845,22 @@ h3{
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
+.grid-cols-\[1fr_200px_200px\]{
+  grid-template-columns: 1fr 200px 200px;
+}
+
+.grid-cols-\[1fr_130px_130px\]{
+  grid-template-columns: 1fr 130px 130px;
+}
+
+.grid-cols-\[1fr_140px_140px\]{
+  grid-template-columns: 1fr 140px 140px;
+}
+
+.grid-cols-1{
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
 .grid-rows-3{
   grid-template-rows: repeat(3, minmax(0, 1fr));
 }
@@ -827,6 +871,10 @@ h3{
 
 .items-center{
   align-items: center;
+}
+
+.justify-start{
+  justify-content: flex-start;
 }
 
 .justify-center{
@@ -847,6 +895,10 @@ h3{
 
 .gap-3{
   gap: 0.75rem;
+}
+
+.gap-4{
+  gap: 1rem;
 }
 
 .gap-6{
@@ -887,6 +939,11 @@ h3{
   background-color: rgb(24 24 35 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#5221E6\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(82 33 230 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#FFF3E4\]{
   --tw-bg-opacity: 1;
   background-color: rgb(255 243 228 / var(--tw-bg-opacity));
@@ -895,11 +952,6 @@ h3{
 .bg-black{
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.bg-purple-600{
-  --tw-bg-opacity: 1;
-  background-color: rgb(147 51 234 / var(--tw-bg-opacity));
 }
 
 .bg-purple-900{
@@ -914,11 +966,6 @@ h3{
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#5221E6\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(82 33 230 / var(--tw-bg-opacity));
 }
 
 .object-cover{
@@ -1016,11 +1063,6 @@ h3{
   padding-bottom: 91px;
 }
 
-.px-\[182px\]{
-  padding-left: 182px;
-  padding-right: 182px;
-}
-
 .pb-11{
   padding-bottom: 2.75rem;
 }
@@ -1096,6 +1138,10 @@ h3{
 
 .text-\[117px\]{
   font-size: 117px;
+}
+
+.text-\[16px\]{
+  font-size: 16px;
 }
 
 .text-\[18px\]{
@@ -1277,6 +1323,10 @@ h3{
     height: 280px;
   }
 
+  .md\:h-\[422px\]{
+    height: 422px;
+  }
+
   .md\:h-\[650px\]{
     height: 650px;
   }
@@ -1342,6 +1392,14 @@ h3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
+  .md\:grid-cols-\[1fr_200px_200px\]{
+    grid-template-columns: 1fr 200px 200px;
+  }
+
+  .md\:grid-cols-\[1fr_140px_140px\]{
+    grid-template-columns: 1fr 140px 140px;
+  }
+
   .md\:grid-rows-2{
     grid-template-rows: repeat(2, minmax(0, 1fr));
   }
@@ -1371,6 +1429,11 @@ h3{
   .md\:px-10{
     padding-left: 2.5rem;
     padding-right: 2.5rem;
+  }
+
+  .md\:px-\[72px\]{
+    padding-left: 72px;
+    padding-right: 72px;
   }
 
   .md\:py-0{
@@ -1418,8 +1481,16 @@ h3{
     display: flex;
   }
 
+  .lg\:w-\[196px\]{
+    width: 196px;
+  }
+
   .lg\:max-w-\[690px\]{
     max-width: 690px;
+  }
+
+  .lg\:grid-cols-\[1fr_200px_200px\]{
+    grid-template-columns: 1fr 200px 200px;
   }
 
   .lg\:gap-20{
@@ -1465,14 +1536,14 @@ h3{
     padding-right: 4rem;
   }
 
-  .\32xl\:px-\[72px\]{
-    padding-left: 72px;
-    padding-right: 72px;
-  }
-
   .\32xl\:px-\[182px\]{
     padding-left: 182px;
     padding-right: 182px;
+  }
+
+  .\32xl\:px-\[72px\]{
+    padding-left: 72px;
+    padding-right: 72px;
   }
 
   .\32xl\:pt-32{
